# rust-actix

./: .env  Cargo.toml  api.http  readme.md
migrations/2022-04-18-082638_users/: up.sql
src/: lib.rs  main.rs
src/config/: error.rs  mod.rs
src/db/: mod.rs  schema.rs  user.rs
src/db/sql/: user_create.sql  user_schema.sql
src/handlers/: jwt.rs
src/models/: error.rs  user.rs
src/routes/: api.rs  auth.rs  mod.rs  root.rs  user.rs  users.rs
tests/: jwt.rs  jwt2.rs  jwt3.rs  lazy_static.rs  lazy_static2.rs  time.rs
