[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"
dotenv = "0.15.0"
# config
# config = "0.11.0"
# # db
# deadpool-postgres = { version = "0.10.1", features = ["serde"] }
# tokio-pg-mapper = "0.2.0"
# tokio-pg-mapper-derive = "0.2.0"
# tokio-postgres = "0.7.5"
# derive_more = "0.99.2"
# db - diesel
derive_more = "0.99.2"
r2d2 = "0.8.8"
diesel = { version = "1.4.2", features = ["postgres","uuidv07","r2d2"]}
