[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# api
actix-web = "4"
# config
dotenv = "0.15.0"
# db
r2d2 = "0.8.8"
diesel = { version = "1.4.2", features = ["postgres","uuidv07","r2d2"]}
# handlers
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"
derive_more = "0.99.17"
# auth
jsonwebtoken = "8.1.0"
futures-util = "0.3.21"
actix-web-httpauth = "0.6.0"
# jwt-simple = "0.10.10"
# chrono = "0.4.19"
# static
lazy_static = "1.4.0"